# python_factory

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  plan.toml  project.toml  pylintrc  pyproject.toml  skaffold.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml  setup.sh
.github/workflows/: check.yml  release.yml  semgrep.yml
docker/: apt.conf
docker/otel_collector/: otel-collector-config.yaml
docker/tempo/: tempo.yaml
docs/openapi/: openapi.yml
scripts/: build_with_buildpack.sh  clean_mongo.sh  dev-in-cluster.sh  dev-in-container.sh  setup_dev_env.sh  test_portman.sh
src/fastapi_factory_utilities/core/app/base/: plugins_manager_abstract.py
src/fastapi_factory_utilities/core/plugins/odm_plugin/: builder.py  repositories.py
src/python_factory/: __main__.py
src/python_factory/core/: protocols.py
src/python_factory/core/api/: __init__.py  tags.py
src/python_factory/core/api/v1/sys/: __init__.py  health.py  readiness.py
src/python_factory/core/app/: __init__.py  enums.py  utils.py
src/python_factory/core/app/abstracts/: __init__.py  config.py  fastapi_abstract.py
src/python_factory/core/app/base/: __init__.py  application.py  config_abstract.py  exceptions.py  fastapi_application_abstract.py  module.py  plugins_manager_abstract.py  protocols.py
src/python_factory/core/plugins/: __init__.py  protocols.py
src/python_factory/core/plugins/odm_plugin/: __init__.py  builder.py  configs.py  exceptions.py  providers.py
src/python_factory/core/plugins/opentelemetry_plugin/: __init__.py  builder.py  configs.py  exceptions.py  factories.py  providers.py
src/python_factory/core/utils/: configs.py  importlib.py  injector_fastapi.py  log.py  uvicorn.py  yaml_reader.py
src/python_factory/example/: __init__.py  __main__.py  application.yaml
src/python_factory/example/api/books/: responses.py  routes.py
src/python_factory/example/app/: __init__.py  app.py  config.py
src/python_factory/example/models/books/: document.py  repository.py
src/python_factory/example/services/books/: __init__.py  services.py  types.py
src/python_poetry_empty/: __main__.py
src/python_poetry_empty/cli/: __init__.py  commands.py
src/python_poetry_empty/setup/: log.py
tests/: conftest.py
tests/integrations/core/plugins/odm_plugins/: test_repositories.py
tests/integrations/example/api/v1/books/: test_routes.py
tests/integrations/example/api/v1/sys/: test_health.py
tests/integrations/example/models/books/: test_repositories.py
tests/performance/: locustfile.py
tests/portman/: portman-cli.json  portman-config.yml
tests/units/: conf_test.py
tests/units/fastapi_factory_utilities/core/app/base/: test_fastapi_application_abstract.py  test_plugins_manager_abstract.py
tests/units/fastapi_factory_utilities/core/plugins/odm/: test_repositories.py
tests/units/fastapi_factory_utilities/core/utils/: test_configs.py  test_importlib.py  test_log.py  test_yaml_reader.py
tests/units/fastapi_factory_utilities/example/api/v1/books/: test_books.py
tests/units/fastapi_factory_utilities/example/entities/books/: test_types.py
tests/units/fastapi_factory_utilities/example/services/books/: test_services.py
tests/units/python_factory/core/app/base/: test_fastapi_application_abstract.py  test_plugins_manager_abstract.py
tests/units/python_factory/core/plugins/odm/: test_repositories.py
tests/units/python_factory/core/utils/: test_configs.py  test_importlib.py  test_log.py  test_yaml_reader.py
tests/units/python_factory/example/: __init__.py
tests/units/python_factory/example/api/v1/books/: test_books.py  test_routes.py
tests/units/python_factory/example/api/v1/sys/: test_health.py
tests/units/python_factory/example/entities/books/: test_types.py
tests/units/python_factory/example/services/books/: test_services.py  test_types.py
tests/units/python_poetry_empty/setup/: test_log.py
