[tool.poetry]
name = "python_poetry_empty"
version = "0.1.0"
description = ""
authors = ["miragecentury <victorien.vanroye@gmail.com>"]
readme = "README.md"
packages = [
    { include = "python_poetry_empty", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.1.0"
typer = "^0.12.3"

[tool.poetry.group.test.dependencies]
mypy = "^1.10.0"
types-pyyaml = "^6.0.12.20240311"
pylint = {version="^3.2.2", extras=["spelling"]}
black = "^24.4.2"
pre-commit = "^3.7.1"
pyupgrade = "^3.15.2"
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"

[tool.poetry.extras]

[tool.poetry.scripts]
python-poetry-empty = "python_poetry_empty.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "tests/units -n auto --color=yes"
filterwarnings = [
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
packages = "python_poetry_empty"
mypy_path  = "src:tests"
