[tool.poetry]
name = "python_factory"
version = "0.1.0"
description = ""
authors = ["miragecentury <victorien.vanroye@gmail.com>"]
readme = "README.md"
packages = [
    { include = "python_factory", from = "src" },
]

[tool.poetry.dependencies]
python = "~3.12"
structlog = "^24.1.0"
typer = "^0.12.3"
injector = "^0.22.0"
pydantic = "^2.8.2"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
opentelemetry-sdk = "^1.26.0"
opentelemetry-exporter-otlp-proto-http = "^1.26.0"
httpx = "^0.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-propagator-b3 = "^1.26.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.10.0"
types-requests = "^2.32.0.20240712"
types-pyyaml = "^6.0.12.20240311"
pylint = {version="^3.2.2", extras=["spelling"]}
black = "^24.4.2"
pre-commit = "^3.7.1"
pyupgrade = "^3.15.2"
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
ruff = "^0.6.1"

[tool.poetry.extras]

[tool.poetry.scripts]
python-factory-example = "python_factory.example.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "tests/units -n auto --color=yes --import-mode=importlib"
filterwarnings = [
    "ignore:.*Type google._upb._message.MessageMapContainer:DeprecationWarning",
    "ignore:.*Type google._upb._message.ScalarMapContainer:DeprecationWarning",
    "ignore:.*pkg_resources is deprecated as an API.:DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
packages = "python_factory"
mypy_path  = "src:tests"
namespace_packages = true
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["D","F","E","W","I","UP","PL","N","RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"
